--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@ant-design/pro-table": "^2.17.0",
     "@umijs/route-utils": "^1.0.33",
     "antd": "^4.12.0",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
     "lodash.debounce": "^4.0.8",
