--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@ant-design/pro-form": "^1.3.0",
     "@ant-design/pro-layout": "^6.9.0",
     "@ant-design/pro-table": "^2.17.0",
+    "@umijs/hooks": "^1.9.3",
     "@umijs/route-utils": "^1.0.33",
     "antd": "^4.12.0",
     "axios": "^0.21.1",
@@ -63,7 +64,7 @@
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.0.4",
     "umi": "^3.4.1",
-    "umi-request": "^1.0.8"
+    "umi-request": "^1.3.5"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^1.0.28",
