--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "build/dist",
     "module": "esnext",
     "target": "esnext",
-    "lib": ["esnext", "dom"],
+    "lib": ["esnext", "dom","es5", "es6",  "dom.iterable"],
     "sourceMap": true,
     "baseUrl": ".",
     "jsx": "react-jsx",
@@ -18,6 +18,7 @@
     "skipLibCheck": true,
     "experimentalDecorators": true,
     "strict": true,
+    
     "paths": {
       "@/*": ["./src/*"],
       "@@/*": ["./src/.umi/*"]
