--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-dom": "^17.0.0",
     "react-fittext": "^1.0.0",
     "react-helmet-async": "^1.0.4",
+    "react-highlight-words": "^0.17.0",
     "react-router": "^4.3.1",
     "umi": "^3.4.1",
     "umi-request": "^1.3.5"
