--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-highlight-words": "^0.16.2",
     "@umijs/fabric": "^2.5.1",
     "@umijs/plugin-blocks": "^2.0.5",
     "@umijs/plugin-esbuild": "^1.0.1",
